--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@new-ui/reset",
   "version": "0.0.1",
-  "description": "CSS reset.",
+  "description": "SCSS, CSS reset. ",
   "source": "src/index.scss",
   "main": "dist/index.css",
   "targets": {
